<resources>
    <string name="app_name">Carnage</string>
    <string name="you_turn">CARNAGE</string>
    <string name="attack_head">удар в голову</string>
    <string name="attack_chest">удар в корпус</string>
    <string name="attack_belt">удар в пояс</string>
    <string name="attack_legs">удар по ногам</string>
    <string name="block_head">блок головы</string>
    <string name="block_chest">блок корпуса</string>
    <string name="block_belt">блок пояса</string>
    <string name="block_legs">блок ног</string>
    <string name="refresh_button">Обновить</string>
    <string name="block_attack_text">"Демон пытался ударить вас $enemyAttackName ,но вы заблокировали удар"</string>
    <string name="attack_view">Атака</string>
    <string name="block_view">Защита</string>
    <string name="attack_button">В АТАКУ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button_text">Создать Аккаунт</string>
    <string name="signIn_button_text">Войти</string>
    <string name="donate_button">Купить сестерции</string>
    <string name="balance_fragment_plain_text_hint">Введите количество</string>
    <string name="balance_fragment_button_text">Купить</string>
    <string name="email_hint">Введите eMail</string>
    <string name="email_tv">Email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_tv">Password</string>
    <string name="go_back_button">Назад</string>
    <string name="win_text">ПОБЕДА БЛЯ</string>
    <string name="lose_text">ЛОШАРА</string>
    <string name="again_text_button">Заново</string>


</resources>